Backend - added story crud handlers and voting handlers